add unit test for lidar_process, and fix merge conflict

--- a/modules/perception/obstacle/common/BUILD
+++ b/modules/perception/obstacle/common/BUILD
@@ -25,9 +25,14 @@ cc_test(
     srcs = [
         "geometry_util_test.cc",
     ],
+    hdrs = [
+        "geometry_util.h",
+        "convex_hullxy.h",
+        ],
     deps = [
-        ":perception_obstacle_common",
-        "@gtest//:main",
+        "//modules/common:log",
+        "//modules/perception/lib/pcl_util:pcl_util",
+        "@eigen//:eigen"
     ],
 )
 
