--- a/modules/perception/conf/BUILD
+++ b/modules/perception/conf/BUILD
@@ -6,3 +6,8 @@ filegroup(
         "adapter.conf",
     ],
 )
+
+filegroup(
+    name = "perception_cnn_segmentation_config",
+    srcs = ["cnn_segmentation.conf"],
+)
