--- a/modules/perception/conf/perception.conf
+++ b/modules/perception/conf/perception.conf
@@ -22,3 +22,8 @@
 # type: bool
 # default: false
 --enable_hdmap_input=true
+
+# Segemntation
+# type: string
+#default:
+--onboard_segmentation=CNNSegmentation
