--- a/modules/prediction/container/BUILD
+++ b/modules/prediction/container/BUILD
@@ -9,6 +9,7 @@ cc_library(
     deps = [
         "//modules/common:macro",
         "//modules/common:log",
+        "//modules/common/adapters/proto:adapter_config_proto",
         "//modules/prediction/container/obstacles:obstacles_container",
         "//modules/prediction/container/pose:pose_container",
         "@glog//:glog",
