[perception] add 'use_all_grids_for_clustering' mode

--- a/modules/perception/data/models/cnn_segmentation/cnnseg.conf
+++ b/modules/perception/data/models/cnn_segmentation/cnnseg.conf
@@ -1,8 +1,8 @@
 
+objectness_thresh: 0.5
+use_all_grids_for_clustering: true
 confidence_thresh: 0.1
 height_thresh: 0.5
-
-#return_bg: true
 min_pts_num: 3
 
 use_full_cloud: true
