render decisions in dreamview frontend

--- a/modules/dreamview/frontend/src/store/config/parameters.yml
+++ b/modules/dreamview/frontend/src/store/config/parameters.yml
@@ -24,6 +24,7 @@ options:
     showConsole: false
     showPlanning: true
     showObstacles: true
+    showDecision: true
 debug:
   # Turn this on for monitor related debugging
   autoMonitorMessage: false
