--- a/modules/planning/optimizer/qp_spline_path/BUILD
+++ b/modules/planning/optimizer/qp_spline_path/BUILD
@@ -26,6 +26,7 @@ cc_library(
         "//modules/planning/common:decision_data",
         "//modules/planning/common:obstacle",
         "//modules/planning/common:planning_data",
+        "//modules/planning/common:planning_gflags",        
         "//modules/planning/common/path:discretized_path",
         "//modules/planning/common/path:frenet_frame_path",
         "//modules/planning/common/path:path_data",
