Add prediction to dreamview (frontend)

--- a/modules/dreamview/frontend/src/store/config/parameters.yml
+++ b/modules/dreamview/frontend/src/store/config/parameters.yml
@@ -25,6 +25,8 @@ options:
     showPlanning: true
     showObstacles: true
     showDecision: true
+    showPredictionMajor: true
+    showPredictionMinor: false
 debug:
   # Turn this on for monitor related debugging
   autoMonitorMessage: false
