modify perception config file (#140)
* add unit test for lidar_process, and fix merge conflict

* fix merge conflict

* remove the comment of hdmap

* modify hdmap interface, and add unit test for hdmap_input

* modify perception config file

--- a/modules/perception/BUILD
+++ b/modules/perception/BUILD
@@ -38,4 +38,12 @@ filegroup(
     ]),
 )
 
+filegroup(
+    name = "perception_conf",
+    srcs = glob([
+        "conf/*",
+        "data/**",
+    ]),
+)
+
 cpplint()
