--- a/modules/perception/conf/perception.conf
+++ b/modules/perception/conf/perception.conf
@@ -1,7 +1,7 @@
 --adapter_config_path=modules/perception/conf/adapter.conf
 
 ####################################################################
-# Flags from lib/config_manager/config_manager.cpp
+# Flags from lib/config_manager/config_manager.cc
 # The ModelConfig config paths file.
 # type: string
 # default: ./conf/config_manager.config
@@ -10,20 +10,69 @@
 # Project work root directory.
 # type: string
 # default: ""
---work_root=
+--work_root=modules/perception
 
-
-# roi filter before GroundDetector.
+####################################################################
+# Flags from obstacle/onboard/hdmap_input.cc
+# The hdmap file path.
 # type: string
-# default:
---onboard_prev_gd_roi_filter=HdmapROIFilter
+# default: 
+--map_file=
 
+# roi distance of car center
+# type: double
+# default: 60.0
+--map_radius=60.0
+
+# step for sample road boundary points
+# type: int32
+# default: 1
+--map_sample_step=1
+
+####################################################################
+# Flags from obstacle/onboard/lidar_process.cc
 # enable hdmap input for roi filter
 # type: bool
 # default: false
---enable_hdmap_input=true
+--enable_hdmap_input=false
 
-# Segemntation
+# roi filter before GroundDetector.
 # type: string
-#default:
---onboard_segmentation=CNNSegmentation
+# candidate: DummyROIFilter, HdmapROIFilter
+--onboard_roi_filter=HdmapROIFilter
+
+# the segmentation algorithm for onboard
+# type: string
+# candidate: DummySegmentation, CNNSegmentation
+--onboard_segmentor=CNNSegmentation
+
+# the object build algorithm for onboard
+# type: string
+# candidate: DummyObjectBuilder, MinBoxObjectBuilder
+--onboard_object_builder=MinBoxObjectBuilder
+
+# the tracking algorithm for onboard
+# type: string
+# candidate: DummyTracker, 
+--onboard_tracker=DummyTracker
+
+# the perception module's output topic name.
+# type: string
+# default: perception_obstacle
+--obstacle_module_name=perception_obstacle
+
+# Query Ros TF timeout in ms. ros::Duration time.
+# type: int
+# default: 10
+--tf2_buff_in_ms=10
+
+# ros TF2 quary frame id. tf2_buffer.lookupTransform.
+# type: string
+# default: world
+--lidar_tf2_frame_id=world
+
+# ros TF2 quary child frame id. tf2_buffer.lookupTransform.
+# type: string
+# default: velodyne64
+--lidar_tf2_child_frame_id=velodyne64
+
