--- a/modules/perception/conf/BUILD
+++ b/modules/perception/conf/BUILD
@@ -6,3 +6,8 @@ filegroup(
         "adapter.conf",
     ],
 )
+
+filegroup(
+    name = "perception_config",
+    srcs = ["config_manager.config"],
+）
