Added debug info

--- a/modules/prediction/container/pose/BUILD
+++ b/modules/prediction/container/pose/BUILD
@@ -7,9 +7,10 @@ cc_library(
     srcs = ["pose_container.cc"],
     hdrs = ["pose_container.h"],
     deps = [
+        "//modules/prediction/container",
         "//modules/localization/proto:localization_proto",
         "//modules/perception/proto:perception_proto",
-        "//modules/prediction/container",
+        "//modules/common:log",
     ],
 )
 
