added RoutingHelper to create Path from routing

--- a/modules/map/pnc_map/BUILD
+++ b/modules/map/pnc_map/BUILD
@@ -3,7 +3,7 @@ load("//tools:cpplint.bzl", "cpplint")
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
-    name = "pnc_path",
+    name = "path",
     srcs = [
         "path.cc",
     ],
@@ -25,7 +25,7 @@ cc_test(
     ],
     data = ["//modules/planning:planning_testdata"],
     deps = [
-        ":pnc_path",
+        ":path",
         "//modules/common:log",
         "//modules/common/time",
         "//modules/common/util",
