--- a/modules/planning/reference_line/BUILD
+++ b/modules/planning/reference_line/BUILD
@@ -17,7 +17,7 @@ cc_library(
         "//modules/common/math",
         "//modules/common/proto:path_point_proto",
         "//modules/common/util:string_util",
-        "//modules/map/pnc_map:pnc_path",
+        "//modules/map/pnc_map:path",
         "//modules/planning/common:planning_gflags",
         "//modules/planning/math:double",
     ],
