Make linear interpolation function template

--- a/modules/common/math/BUILD
+++ b/modules/common/math/BUILD
@@ -320,6 +320,7 @@ cc_test(
     deps = [
         ":linear_interpolation",
         "//modules/common:log",
+        "@eigen//:eigen",
         "@gtest//:main",
     ],
 )
