--- a/modules/perception/obstacle/lidar/segmentation/cnnseg/BUILD
+++ b/modules/perception/obstacle/lidar/segmentation/cnnseg/BUILD
@@ -1,5 +1,7 @@
 load("//tools:cpplint.bzl", "cpplint")
 
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -53,3 +55,5 @@ cc_library(
          "//modules/perception/obstacle/lidar/segmentation/cnnseg:cnnseg_util",
     ],
 )
+
+cpplint()
