Minor changes in prepartion for adding SimControl

--- a/modules/dreamview/conf/adapter.conf
+++ b/modules/dreamview/conf/adapter.conf
@@ -1,11 +1,11 @@
 config {
   type: LOCALIZATION
-  mode: RECEIVE_ONLY
+  mode: DUPLEX  # Potentially published by SimControl
   message_history_limit: 1
 }
 config {
   type: CHASSIS
-  mode: RECEIVE_ONLY
+  mode: DUPLEX  # Potentially published by SimControl
   message_history_limit: 1
 }
 config {
@@ -25,6 +25,11 @@ config {
 }
 config {
   type: PREDICTION
+  mode: RECEIVE_ONLY
+  message_history_limit: 1
+}
+config {
+  type: RoutingRequest
   mode: RECEIVE_ONLY
   message_history_limit: 1
 }
