--- a/modules/dreamview/conf/adapter.conf
+++ b/modules/dreamview/conf/adapter.conf
@@ -29,7 +29,7 @@ config {
   message_history_limit: 1
 }
 config {
-  type: RoutingRequest
+  type: ROUTING_RESULT
   mode: RECEIVE_ONLY
   message_history_limit: 1
 }
