Fix lint errors.

--- a/modules/common/util/BUILD
+++ b/modules/common/util/BUILD
@@ -29,7 +29,10 @@ cc_library(
 
 cc_library(
     name = "string_util",
-    hdrs = ["string_util.h"],
+    hdrs = [
+        "string_util.h",
+        "string_util_internal.h"
+    ],
 )
 
 cc_test(
