disable prediction input in planning by default.

--- a/modules/planning/conf/adapter.conf
+++ b/modules/planning/conf/adapter.conf
@@ -11,6 +11,10 @@ config {
   mode: RECEIVE_ONLY
 }
 config {
+  type: PREDICTION
+  mode: RECEIVE_ONLY
+}
+config {
   type: PLANNING_TRAJECTORY
   mode: PUBLISH_ONLY
 }
