added feed by file feature for VehicleState class
preparation for more unit tests

--- a/modules/planning/optimizer/BUILD
+++ b/modules/planning/optimizer/BUILD
@@ -71,6 +71,7 @@ cc_library(
         "//modules/common:log",
         "//modules/common/adapters:adapter_manager",
         "//modules/common/util",
+        "//modules/common/vehicle_state",
         "//modules/planning/common:data_center",
         "//modules/planning/proto:dp_poly_path_config_proto",
         "@gtest//:gtest",
