Update lat gain scheduler and test

--- a/modules/control/controller/BUILD
+++ b/modules/control/controller/BUILD
@@ -29,6 +29,7 @@ cc_library(
         "//modules/common/status",
         "//modules/common/time",
         "//modules/control/common:control_gflags",
+        "//modules/control/common:interpolation_1d",
         "//modules/control/common:trajectory_analyzer",
         "//modules/control/filters:digital_filter",
         "//modules/control/filters:digital_filter_coefficients",
