[Perception] Fix shared_ptr bugs in cnn_segmentation.cc and merge fix (#207)
* [perception] add 'use_all_grids_for_clustering' mode

* Add unit test for CNNSegmentation (libproto conflict issue should be fixed for Caffe)

* (1) Fix bugs of shared_ptr in cnn_segmentation.cpp; (2) Modify CNNSegmentation config; (3) Modify .cpp suffix to .cc

* Fix shared_ptr bugs in cnn_segmentation.cpp

* Modify cnnseg BUILD according the fix of ros.Build

* remove uni-test because of the libprotobuf conflict issue

--- a/modules/perception/conf/config_manager.config
+++ b/modules/perception/conf/config_manager.config
@@ -1,2 +1,2 @@
 model_config_path: "./data/models/tracker.config"
-model_config_path: "./data/models/cnn_segmentation.conf"
+model_config_path: "./data/models/cnn_segmentation.config"
