use translate point in free move prediction trajectory

--- a/modules/prediction/common/BUILD
+++ b/modules/prediction/common/BUILD
@@ -16,7 +16,9 @@ cc_library(
     name = "prediction_util",
     srcs = ["prediction_util.cc"],
     hdrs = ["prediction_util.h"],
-    deps = [],
+    deps = [
+        "//modules/common/proto:path_point_proto",
+    ],
 )
 
 cc_library(
