--- a/modules/planning/common/BUILD
+++ b/modules/planning/common/BUILD
@@ -59,22 +59,6 @@ cc_library(
 )
 
 cc_library(
-    name = "routing_helper",
-    srcs = [
-        "routing_helper.cc",
-    ],
-    hdrs = [
-        "routing_helper.h",
-    ],
-    deps = [
-        ":planning_gflags",
-        "//modules/map/hdmap",
-        "//modules/map/pnc_map:path",
-        "//modules/planning/proto:planning_proto",
-    ],
-)
-
-cc_library(
     name = "planning_object",
     srcs = [
         "planning_object.cc",
@@ -117,10 +101,10 @@ cc_library(
         "frame.h",
     ],
     deps = [
-        ":routing_helper",
         "//modules/common:log",
         "//modules/common/adapters:adapter_manager",
         "//modules/common/vehicle_state",
+        "//modules/map/pnc_map",
         "//modules/planning/common:planning_data",
         "//modules/planning/proto:reference_line_smoother_config_proto",
         "//modules/planning/reference_line:reference_line_smoother",
