initial setup folders for unit tests in prediction module

--- a/modules/prediction/BUILD
+++ b/modules/prediction/BUILD
@@ -43,4 +43,14 @@ cc_binary(
     ],
 )
 
+filegroup(
+    name = "prediction_data",
+    srcs = glob(["data/**"]),
+)
+
+filegroup(
+    name = "prediction_testdata",
+    srcs = glob(["testdata/**"]),
+)
+
 cpplint()
