--- a/modules/perception/tool/BUILD
+++ b/modules/perception/tool/BUILD
@@ -1,5 +1,7 @@
 load("//tools:cpplint.bzl", "cpplint")
 
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_binary(
@@ -18,3 +20,5 @@ cc_binary(
         "@eigen//:eigen",
     ],
 )
+
+cpplint()
