--- a/modules/dreamview/backend/BUILD
+++ b/modules/dreamview/backend/BUILD
@@ -15,6 +15,7 @@ cc_library(
         "//modules/common:apollo_app",
         "//modules/common/adapters:adapter_manager",
         "//modules/dreamview/backend/simulation_world:simulation_world_updater",
+        "//modules/dreamview/backend/sim_control",
         "//modules/dreamview/backend/websocket",
         "@civetweb//:civetweb++",
     ],
