--- a/modules/perception/obstacle/lidar/visualizer/BUILD
+++ b/modules/perception/obstacle/lidar/visualizer/BUILD
@@ -1,5 +1,7 @@
 load("//tools:cpplint.bzl", "cpplint")
 
+load("//tools:cpplint.bzl", "cpplint")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -22,3 +24,5 @@ cc_library(
         "@vtk//:vtk",
     ],
 )
+
+cpplint()
