modify the register function for perception, and fix hm_tracker_test

--- a/modules/perception/conf/perception.conf
+++ b/modules/perception/conf/perception.conf
@@ -39,21 +39,21 @@
 # roi filter before GroundDetector.
 # type: string
 # candidate: DummyROIFilter, HdmapROIFilter
---onboard_roi_filter=HdmapROIFilter
+--onboard_roi_filter=DummyROIFilter
 
 # the segmentation algorithm for onboard
 # type: string
 # candidate: DummySegmentation, CNNSegmentation
---onboard_segmentor=CNNSegmentation
+--onboard_segmentor=DummySegmentation
 
 # the object build algorithm for onboard
 # type: string
 # candidate: DummyObjectBuilder, MinBoxObjectBuilder
---onboard_object_builder=MinBoxObjectBuilder
+--onboard_object_builder=DummyObjectBuilder
 
 # the tracking algorithm for onboard
 # type: string
-# candidate: DummyTracker, 
+# candidate: DummyTracker, HmObjectTracker
 --onboard_tracker=DummyTracker
 
 # the perception module's output topic name.
