--- a/modules/perception/obstacle/onboard/BUILD
+++ b/modules/perception/obstacle/onboard/BUILD
@@ -33,6 +33,9 @@ cc_library(
         "//modules/perception/obstacle/base:perception_obstacle_base",
         "//modules/perception/obstacle/lidar/dummy:perception_obstacle_lidar_dummy",
         "//modules/perception/obstacle/lidar/interface:perception_obstacle_lidar_interface",
+# "//modules/perception/obstacle/lidar/segmentation/cnnseg:perception_obstacle_lidar_segmention_cnnseg",
+        "//modules/perception/obstacle/lidar/object_builder/min_box:perception_obstacle_lidar_object_builder_min_box",
+        "//modules/perception/obstacle/lidar/tracker/hm_tracker:perception_obstacle_lidar_tracker_hm_tracker",
         "@eigen//:eigen",
         "@ros//:ros_common",
     ],
