show preidiction minor by default

--- a/modules/dreamview/frontend/src/store/config/parameters.yml
+++ b/modules/dreamview/frontend/src/store/config/parameters.yml
@@ -26,7 +26,7 @@ options:
     showObstacles: true
     showDecision: true
     showPredictionMajor: true
-    showPredictionMinor: false
+    showPredictionMinor: true
 debug:
   # Turn this on for monitor related debugging
   autoMonitorMessage: false
