--- a/modules/common/util/BUILD
+++ b/modules/common/util/BUILD
@@ -16,7 +16,7 @@ cc_library(
     ],
     deps = [
         "//modules/common/math",
-        "//modules/common/proto:path_point_proto",
+        "//modules/common/proto:pnc_point_proto",
         "//modules/common/time",
         "//modules/map/proto:map_proto",
     ],
