--- a/modules/planning/math/spiral_curve/BUILD
+++ b/modules/planning/math/spiral_curve/BUILD
@@ -11,7 +11,7 @@ cc_library(
         "spiral_curve.h",
     ],
     deps = [
-        "//modules/common/proto:path_point_proto",
+        "//modules/common/proto:pnc_point_proto",
         "//modules/common/status",
         "//modules/planning/proto:spiral_curve_config_proto",
     ],
@@ -43,7 +43,7 @@ cc_library(
         "//modules/common:log",
         "//modules/common/math",
         "//modules/common/proto:error_code_proto",
-        "//modules/common/proto:path_point_proto",
+        "//modules/common/proto:pnc_point_proto",
         "@eigen//:eigen",
     ],
 )
@@ -61,7 +61,7 @@ cc_library(
         ":spiral_formula",
         "//modules/common:log",
         "//modules/common/math",
-        "//modules/common/proto:path_point_proto",
+        "//modules/common/proto:pnc_point_proto",
         "@eigen//:eigen",
     ],
 )
