--- a/modules/planning/optimizer/dp_st_speed/BUILD
+++ b/modules/planning/optimizer/dp_st_speed/BUILD
@@ -28,7 +28,7 @@ cc_library(
         "dp_st_cost.h",
     ],
     deps = [
-        "//modules/common/proto:path_point_proto",
+        "//modules/common/proto:pnc_point_proto",
         "//modules/planning/common:data_center",
         "//modules/planning/math:double",
         "//modules/planning/optimizer/st_graph:st_graph_boundary",
@@ -48,7 +48,7 @@ cc_library(
         ":dp_st_cost",
         "//modules/common/configs/proto:vehicle_config_proto",
         "//modules/common/proto:common_proto",
-        "//modules/common/proto:path_point_proto",
+        "//modules/common/proto:pnc_point_proto",
         "//modules/planning/common:data_center",
         "//modules/planning/common:decision_data",
         "//modules/planning/common/speed:speed_data",
