--- a/modules/planning/optimizer/qp_spline_st_speed/BUILD
+++ b/modules/planning/optimizer/qp_spline_st_speed/BUILD
@@ -33,7 +33,7 @@ cc_library(
         "//modules/common/configs/proto:vehicle_config_proto",
         "//modules/common/math",
         "//modules/common/proto:error_code_proto",
-        "//modules/common/proto:path_point_proto",
+        "//modules/common/proto:pnc_point_proto",
         "//modules/common/util",
         "//modules/planning/common:planning_util",
         "//modules/planning/math/smoothing_spline:spline_1d_generator",
@@ -55,7 +55,7 @@ cc_library(
         "//modules/common:log",
         "//modules/common/configs:vehicle_config_helper",
         "//modules/common/configs/proto:vehicle_config_proto",
-        "//modules/common/proto:path_point_proto",
+        "//modules/common/proto:pnc_point_proto",
         "//modules/localization/proto:pose_proto",
         "//modules/map/hdmap",
         "//modules/planning/optimizer:speed_optimizer",
