--- a/modules/planning/planner/BUILD
+++ b/modules/planning/planner/BUILD
@@ -8,7 +8,7 @@ cc_library(
         "planner.h",
     ],
     deps = [
-        "//modules/common/proto:path_point_proto",
+        "//modules/common/proto:pnc_point_proto",
         "//modules/common/status",
         "//modules/common/vehicle_state",
         "//modules/planning/proto:planning_proto",
