--- a/modules/planning/reference_line/BUILD
+++ b/modules/planning/reference_line/BUILD
@@ -15,7 +15,7 @@ cc_library(
     deps = [
         "//modules/common:log",
         "//modules/common/math",
-        "//modules/common/proto:path_point_proto",
+        "//modules/common/proto:pnc_point_proto",
         "//modules/common/util:string_util",
         "//modules/map/pnc_map:path",
         "//modules/planning/common:planning_gflags",
