--- a/modules/prediction/proto/BUILD
+++ b/modules/prediction/proto/BUILD
@@ -21,7 +21,7 @@ cc_proto_library(
     ],
     deps = [
         "//modules/common/proto:common_proto",
-        "//modules/common/proto:path_point_proto",
+        "//modules/common/proto:pnc_point_proto",
         "//modules/perception/proto:perception_proto",
     ],
 )
