[perception] Modify directories of 'testdata' and 'data/models' to 'data' and 'model' respectively (#248)

--- a/modules/perception/BUILD
+++ b/modules/perception/BUILD
@@ -32,16 +32,16 @@ cc_binary(
 )
 
 filegroup(
-    name = "perception_testdata",
+    name = "perception_data",
     srcs = glob([
-        "testdata/**",
+        "data/**",
     ]),
 )
 
 filegroup(
-    name = "perception_data",
+    name = "perception_model",
     srcs = glob([
-        "data/**"
+        "model/**"
     ]),
 )
 
