--- a/modules/perception/obstacle/lidar/object_builder/min_box/BUILD
+++ b/modules/perception/obstacle/lidar/object_builder/min_box/BUILD
@@ -24,7 +24,7 @@ cc_test(
     srcs = [
         "min_box_test.cc",
     ],
-    data = ["//modules/perception:perception_testdata"],
+    data = ["//modules/perception:perception_data"],
     linkopts = [
         "-lqhull",
     ],
