--- a/modules/perception/conf/config_manager.config
+++ b/modules/perception/conf/config_manager.config
@@ -1,2 +1,2 @@
-model_config_path: "./data/models/tracker.config"
-model_config_path: "./data/models/cnn_segmentation.config"
+model_config_path: "model/tracker.config"
+model_config_path: "model/cnn_segmentation.config"
