--- a/modules/planning/optimizer/BUILD
+++ b/modules/planning/optimizer/BUILD
@@ -74,6 +74,7 @@ cc_library(
         "//modules/common/vehicle_state",
         "//modules/planning/common:data_center",
         "//modules/planning/proto:dp_poly_path_config_proto",
+        "//modules/planning/proto:dp_st_speed_config_proto",
         "@gtest//:gtest",
     ],
 )
