moved qp_st_boundary_mapper to st_graph. TODO: use same boundary mapper for all optimizers.

--- a/modules/planning/optimizer/qp_spline_st_speed/BUILD
+++ b/modules/planning/optimizer/qp_spline_st_speed/BUILD
@@ -3,23 +3,6 @@ load("//tools:cpplint.bzl", "cpplint")
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
-    name = "qp_spline_st_boundary_mapper",
-    srcs = [
-        "qp_spline_st_boundary_mapper.cc",
-    ],
-    hdrs = [
-        "qp_spline_st_boundary_mapper.h",
-    ],
-    deps = [
-        "//modules/common:log",
-        "//modules/common/util",
-        "//modules/common/vehicle_state",
-        "//modules/planning/common:data_center",
-        "//modules/planning/optimizer/st_graph:st_boundary_mapper",
-    ],
-)
-
-cc_library(
     name = "qp_spline_st_graph",
     srcs = [
         "qp_spline_st_graph.cc",
@@ -28,7 +11,6 @@ cc_library(
         "qp_spline_st_graph.h",
     ],
     deps = [
-        ":qp_spline_st_boundary_mapper",
         "//modules/common:log",
         "//modules/common/configs/proto:vehicle_config_proto",
         "//modules/common/math",
@@ -37,6 +19,7 @@ cc_library(
         "//modules/common/util",
         "//modules/planning/common:planning_util",
         "//modules/planning/math/smoothing_spline:spline_1d_generator",
+        "//modules/planning/optimizer/st_graph:st_boundary_mapper_impl",
         "//modules/planning/optimizer/st_graph:st_graph_data",
     ],
 )
@@ -50,7 +33,6 @@ cc_library(
         "qp_spline_st_speed_optimizer.h",
     ],
     deps = [
-        ":qp_spline_st_boundary_mapper",
         ":qp_spline_st_graph",
         "//modules/common:log",
         "//modules/common/configs:vehicle_config_helper",
@@ -59,6 +41,7 @@ cc_library(
         "//modules/localization/proto:pose_proto",
         "//modules/map/hdmap",
         "//modules/planning/optimizer:speed_optimizer",
+        "//modules/planning/optimizer/st_graph:st_boundary_mapper_impl",
         "//modules/planning/proto:planning_proto",
     ],
 )
