--- a/modules/planning/optimizer/st_graph/BUILD
+++ b/modules/planning/optimizer/st_graph/BUILD
@@ -79,4 +79,21 @@ cc_library(
     ],
 )
 
+cc_library(
+    name = "st_boundary_mapper_impl",
+    srcs = [
+        "st_boundary_mapper_impl.cc",
+    ],
+    hdrs = [
+        "st_boundary_mapper_impl.h",
+    ],
+    deps = [
+        "//modules/common:log",
+        "//modules/common/util",
+        "//modules/common/vehicle_state",
+        "//modules/planning/common:data_center",
+        "//modules/planning/optimizer/st_graph:st_boundary_mapper",
+    ],
+)
+
 cpplint()
