use frame as the context variable in planning.

--- a/modules/planning/BUILD
+++ b/modules/planning/BUILD
@@ -24,8 +24,8 @@ cc_library(
         "//modules/planning/planner/em:em_planner",
         "//modules/planning/planner/rtk:rtk_planner",
         "//modules/planning/proto:planning_proto",
+        "//modules/planning/trajectory_stitcher",
         "//modules/prediction/proto:prediction_proto",
-        "//modules/planning/trajectory_stitcher:trajectory_stitcher",
         "@ros//:ros_common",
     ],
 )
