--- a/modules/planning/optimizer/BUILD
+++ b/modules/planning/optimizer/BUILD
@@ -12,6 +12,7 @@ cc_library(
     ],
     deps = [
         "//modules/common/status",
+        "//modules/planning/common:frame",
     ],
 )
 
@@ -72,6 +73,7 @@ cc_library(
         "//modules/common/adapters:adapter_manager",
         "//modules/common/util",
         "//modules/common/vehicle_state",
+        "//modules/planning:planning_impl",
         "//modules/planning/common:data_center",
         "//modules/planning/proto:dp_poly_path_config_proto",
         "//modules/planning/proto:dp_st_speed_config_proto",
