migrate HDMap to PncMap in planning

--- a/modules/prediction/common/BUILD
+++ b/modules/prediction/common/BUILD
@@ -30,7 +30,7 @@ cc_library(
         "//modules/common/math:linear_interpolation",
         "//modules/common/math:vec2d",
         "//modules/map/hdmap",
-        "//modules/map/pnc_map:path",
+        "//modules/map/pnc_map",
         "//modules/prediction/common:prediction_gflags",
         "@eigen//:eigen",
     ],
