--- a/modules/routing/conf/gflags.conf
+++ b/modules/routing/conf/gflags.conf
@@ -5,5 +5,5 @@
 --enable_old_routing=false
 --use_road_id=true
 --enable_debug_mode=false
---debug_route_path=/home/fuxiaoxin/Desktop/route_debug.txt
---debug_passage_region_path=/home/fuxiaoxin/Desktop/passage_region_debug.bin
+--debug_route_path=~/Desktop/route_debug.txt
+--debug_passage_region_path=~/Desktop/passage_region_debug.bin
