Added evaluator manager unit test

--- a/modules/prediction/evaluator/BUILD
+++ b/modules/prediction/evaluator/BUILD
@@ -31,6 +31,22 @@ cc_library(
     ],
 )
 
+cc_test(
+    name = "evaluator_manager_test",
+    size = "small",
+    srcs = ["evaluator_manager_test.cc"],
+    data = [
+        "//modules/prediction:prediction_data",
+        "//modules/prediction:prediction_testdata",
+    ],
+    deps = [
+        "//modules/prediction/evaluator:evaluator_manager",
+        "//modules/prediction/proto:prediction_conf_proto",
+        "//modules/common/util:util",
+        "@gtest//:main",
+    ]
+)
+
 cc_library(
     name = "evaluator",
     hdrs = ["evaluator.h"],
