--- a/modules/prediction/predictor/pedestrian/BUILD
+++ b/modules/prediction/predictor/pedestrian/BUILD
@@ -16,4 +16,25 @@ cc_library(
     ],
 )
 
+cc_test(
+    name = "regional_predictor_test",
+    size = "small",
+    srcs = [
+        "regional_predictor_test.cc",
+    ],
+    data = [
+        "//modules/prediction:prediction_data",
+        "//modules/prediction:prediction_testdata",
+    ],
+    deps = [
+        "//modules/prediction/predictor/pedestrian:regional_predictor",
+        "@gtest//:main",
+        "//modules/prediction/common:prediction_gflags",
+        "//modules/perception/proto:perception_proto",
+        "//modules/prediction/proto:prediction_proto",
+        "//modules/common/util:util",
+        "//modules/prediction/container/obstacles:obstacles_container",
+    ],
+)
+
 cpplint()
