Clean up routing (#286)

--- a/modules/routing/conf/routing.conf
+++ b/modules/routing/conf/routing.conf
@@ -1,5 +1,5 @@
---node_name=router
---node_namespace=router
+--routing_conf_file=modules/routing/conf/routing.pb.txt
+--adapter_config_path=modules/routing/conf/adapter.conf
 --signal_probe_service=/router/routing_signal
 --graph_dir=/home/caros/adu_data/map
 --enable_old_routing=false
